updates to merge sorted array question