@@ -13,7 +13,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>17</maven.compiler.release>
+    <maven.compiler.release>23</maven.compiler.release>
   </properties>
 
   <dependencyManagement>
@@ -49,28 +49,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>3.6.0</version>
-<!--          <configuration>-->
-<!--            <configLocation>checkstyle.xml</configLocation>-->
-<!--            <consoleOutput>true</consoleOutput>-->
-<!--            <includeTestSourceDirectory>true</includeTestSourceDirectory>-->
-<!--            <violationSeverity>warning</violationSeverity>-->
-<!--          </configuration>-->
-<!--          <executions>-->
-<!--            <execution>-->
-<!--              <goals>-->
-<!--                <goal>-->
-<!--                  check-->
-<!--                </goal>-->
-<!--              </goals>-->
-<!--            </execution>-->
-<!--          </executions>-->
-<!--          <dependencies>-->
-<!--            <dependency>-->
-<!--              <groupId>com.puppycrawl.tools</groupId>-->
-<!--              <artifactId>checkstyle</artifactId>-->
-<!--              <version>10.19.0</version>-->
-<!--            </dependency>-->
-<!--          </dependencies>-->
         </plugin>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
@@ -113,5 +91,16 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>23</source>
+          <target>23</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
